# sample-and-test-params

./: .gitignore  pyproject.toml  run-cp3.py  wsi-sampler.py
examples/: params.csv  params.toml  slides.csv
wsi_cp3/: __init__.py  cli.py  config.py  core.py  sampler.py  segment.py
