[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "wsi-cp3"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "palom",
    "crick",
    "cellpose",
    "dask",
    "dask-image",
    "scikit-image",
    "scipy",
    "numpy",
    "torch",
    "tifffile",
    "tomli; python_version < '3.11'",
]

[project.scripts]
wsi-cp3 = "wsi_cp3.cli:main"

[tool.setuptools_scm]